--- a/2. Mecânicas/1. Atributos.md
+++ b/2. Mecânicas/1. Atributos.md
@@ -1,8 +1,7 @@
-**Atributos** são praticamente o corpo de um **Personagem**. Cada um deles aumenta um aspecto diferente, desde sua eficiência em lutas como sua capacidade de conjurar magias. É o que torna alguém mais poderoso que os demais.
+**Atributos** são praticamente o corpo de um **Personagem**. Cada um deles aumenta um aspecto diferente, desde sua eficiência em lutas como a sua capacidade de conjurar magias. É o que torna alguém mais poderoso que os demais.
 
-Cada ponto em de um dos **Atributos** correspondem a:
-
-1. **Ataque**: 1 ponto de **Dano** do **Ser**.
-2. **Domínio**: 5 pontos de **Energia** máxima.
-3. **Velocidade**: 1 metro de distância a percorrer por turno.
+Cada ponto de um dos **Atributos** correspondem a:
+1. **Ataque**: 1 ponto de **Dano** da **Unidade**;
+2. **Domínio**: 5 pontos de **Mana** máxima;
+3. **Velocidade**: 1 metro de distância a percorrer por turno;
 4. **Vigor**: 5 pontos de **Vida** máxima.
