ajuste na ficha exemplo

--- a/1. Informações/2. Ficha Base.md
+++ b/1. Informações/2. Ficha Base.md
@@ -18,3 +18,17 @@
 - **Domínio**: 0.
 - **Velocidade**: 0.
 - **Vigor**: 0.
+
+# Feitiços e Truques
+
+Feitiço.
+
+Truque.
+
+# Runas
+
+### Runa
+
+**Custa** X pontos de **Energia**.
+
+Descrição.
