--- a/2. Mecânicas/1. Atributos.md
+++ b/2. Mecânicas/1. Atributos.md
@@ -2,6 +2,6 @@
 
 Cada ponto de um dos **Atributos** correspondem a:
 1. **Ataque**: 1 ponto de **Dano** da **Unidade**;
-2. **Domínio**: 5 pontos de **Mana** máxima;
+2. **Domínio**: 5 pontos de **Energia** máxima;
 3. **Velocidade**: 1 metro de distância a percorrer por turno;
 4. **Vigor**: 5 pontos de **Vida** máxima.
