--- a/3. Runas/1. Forma.md
+++ b/3. Runas/1. Forma.md
@@ -2,49 +2,49 @@
 
 ### Si
 
-**Custa** 1 ponto de **Energia**.
+**Custa** 0 pontos de **Energia**.
 
 O **Feitiço** é aplicado a si mesmo.
 
 ### Projétil
 
-**Custa** 3 + **X** pontos de **Energia**.
+**Custa** 2 + **X** pontos de **Energia**.
 
-O **Feitiço** é aplicado no primeiro **Ser** atingido em uma linha reta de (2 + **X**) metros.
+O **Feitiço** é aplicado no primeiro **Ser** atingido em uma linha reta de (4 + **X**) metros.
 
 ### Toque
 
 **Custa** 1 pontos de **Energia**.
 
-O **Feitiço** é aplicado a algo ao seu lado e a sua escolha.
+O **Feitiço** é aplicado a até dois **Seres** ao seu redor e a sua escolha.
 
 # Segundo Nível
 
 ### Armadilha
 
-**Custa** 5 pontos de **Energia**.
+**Custa** 3 pontos de **Energia**.
 
-Você pode colocar um número total de (1 + limite de **Truques**) **Armadilhas**, **Custando** apenas o preço da **Forma**. Caso você passe do limite total de **Armadilhas** a mais antiga será **Dissipada**.
+Você pode colocar um número total de (o seu limite de **Truques** + 2) **Armadilhas**, **Custando** apenas o preço da **Forma**. Caso você passe do limite total de **Armadilhas** a mais antiga será **Dissipada**.
 
 Você pode escolher aplicar qualquer **Feitiço** seu com a **Forma** de **Armadilha** no primeiro **Ser** que pisar em alguma **Armadilha** ou em seus arredores, sem o **Custo** da **Forma**. Aquela **Armadilha** será **Dissipada**.
 
 ### Lembrança
 
-**Custa** 5 pontos de **Energia**.
+**Custa** 2 pontos de **Energia**.
 
-O **Feitiço** é aplicado no lugar onde você estava antes da sua última **Ação** de **Movimento**, e também é aplicado ao redor desse local.
+O **Feitiço** é aplicado no lugar onde você estava antes da sua última **Ação** de **Movimento** e ao redor desse local.
 
 ### Linha
 
 **X** pontos de **Energia**.
 
-O **Feitiço** é aplicado em todos **Seres** em uma linha reta com um comprimento de (metade de **X**) metros.
+O **Feitiço** é aplicado em todos **Seres** em uma linha reta com um comprimento de (3 + metade de **X**) metros.
 
 # Terceiro Nível
 
 ### Cone
 
-**Custa** 5 + **X** pontos de **Energia**.
+**Custa** 3 + **X** pontos de **Energia**.
 
 O **Feitiço** é aplicado em duas linhas adjacentes e também no espaço entre elas. O comprimento das linhas é (2 + um terço de **X**) metros.
 
@@ -52,33 +52,33 @@ O **Feitiço** é aplicado em duas linhas adjacentes e também no espaço entre 
 
 **Custa** 3 + **X** pontos de **Energia**.
 
-A partir de você o **Feitiço** é aplicado em todos **Seres** em uma circunferência com raio de (um terço de **X**) metros.
+A partir de você o **Feitiço** é aplicado em todos **Seres** em uma circunferência com raio de (1 + metade de **X**) metros.
 
 ### Míssil
 
-**Custa** 6 + **X** + **Y** pontos de **Energia**.
+**Custa** 5 + **X** + **Y** pontos de **Energia**.
 
-O **Feitiço** é aplicado no primeiro **Ser** atingido em uma linha reta de (2 + metade de **X**) metros, e também em uma área circular a partir desse **Ser** com um raio de (um sexto de **Y**) metros.
+O **Feitiço** é aplicado no primeiro **Ser** atingido em uma linha reta de (2 + metade de **X**) metros e em uma área circular a partir desse **Ser** com um raio de (1 + um terço de **Y**) metros, além de também ao redor de que cada **Ser** afetado.
 
 ### Ponto
 
-**Custa** 7 pontos de **Energia**.
+**Custa** 5 pontos de **Energia**.
 
-Você pode colocar um número total de (limite de **Truques**) **Pontos**, sem nenhum **Custo**. Caso você passe do limite total de **Pontos** o mais antigo será **Dissipado**.
+Você pode colocar um número total de (o seu limite de **Truques** + 1) **Pontos**, sem nenhum **Custo**. Caso você passe do limite total de **Pontos** o mais antigo será **Dissipado**.
 
 Usar um **Feitiço** com a **Forma** de **Ponto** faz ele ser aplicado em qualquer quantia a sua escolha de **Pontos** e seu arredores, sem os **Dissipar**.
 
 ### Retaliar
 
-**Custa** 10 pontos de **Energia**.
+**Custa** 4 pontos de **Energia**.
 
-O **Feitiço** é aplicado ao último **Ser** que usou uma **Ação** em você, sem mínimo ou máximo de distância.
+O **Feitiço** é aplicado ao último **Ser** que usou uma **Ação** em você, sem mínimo ou máximo de distância, e você pode fazer que ele também seja aplicado ao redor do **Ser**.
 
 ### Rastro
 
-**Custa** 11 pontos de **Energia**.
+**Custa** 4 pontos de **Energia**.
 
-O **Feitiço** não é só aplicado no lugar onde você estava antes da sua última **Ação** de **Movimento**, mas também em todo caminho que você percorreu e em seus arredores até o local atual.
+O **Feitiço** não é só aplicado no lugar onde você estava antes da sua última **Ação** de **Movimento**, mas também em todo caminho que você percorreu.
 
 # Quarto Nível
 
@@ -86,49 +86,49 @@ O **Feitiço** não é só aplicado no lugar onde você estava antes da sua últ
 
 **Custa** **X** pontos de **Energia**.
 
-A partir de você o **Feitiço** é aplicado em todos **Seres** em uma área circular com raio de (um quarto de **X**) metros.
+A partir de você o **Feitiço** é aplicado em todos **Seres** em uma área circular com raio de (um sexto de **X**) metros.
 
 ### Rebote
 
-**Custa** 10 + **X** pontos de **Energia**.
+**Custa** 5 + **X** pontos de **Energia**.
 
-O **Feitiço** é aplicado no primeiro **Ser** atingido em uma linha reta de (5 + a metade de **X**) metros. Esse mesmo **Feitiço** também é disparado do primeiro **Ser** para alguma outra linha reta em sua escolha, com o alcance original, infinitamente entre **Alvos** subsequentes seguindo as mesmas regras.
+O **Feitiço** é aplicado no primeiro **Ser** atingido em uma linha reta de (3 + a metade de **X**) metros. Esse mesmo **Feitiço** também é disparado do primeiro **Ser** para alguma outra linha reta em sua escolha, com o alcance original, infinitamente entre **Alvos** subsequentes seguindo as mesmas regras.
 
 Para cada **Alvo** adicional o **Custo** é o da **Forma** + o número de **Alvos** atingidos no **Turno** calculado no momento do **Feitiço**.
 
 ### Resposta
 
-**Custa** 12 pontos de **Energia**.
+**Custa** 7 pontos de **Energia**.
 
 O **Feitiço** é aplicado ao último **Ser** que usou uma **Habilidade**, sem mínimo ou máximo de distância.
 
 ### Seguir
 
-**Custa** 10 + **X**  pontos de **Energia**.
+**Custa** 7 + **X** pontos de **Energia**.
 
-O **Feitiço** caminha livremente pelo mundo como um **Ser** ao seu controle, em uma distância de (5 + **X**) metros, porém ele é obrigado a uma rota que alcance os arredores de algum **Ser**. O **Feitiço** é aplicado em um **Ser** a sua escolha aos arredores do fim do trajeto. 
+O **Feitiço** caminha livremente pelo mundo como um **Ser** ao seu controle, em uma distância de (3 + **X**) metros, porém ele é obrigado a uma rota que alcance os arredores de algum **Ser**. O **Feitiço** é aplicado em um **Ser** a sua escolha aos arredores do fim do trajeto. 
 
 # Quinto Nível
 
 ### Individual
 
-**Custa** 12 pontos de **Energia**.
+**Custa** 15 pontos de **Energia**.
 
 O **Feitiço** é aplicado a um **Ser** a sua escolha, sem mínimo ou máximo de distância.
 
 ### Local
 
-**Custa** 10 + **X** pontos de **Energia**.
+**Custa** 8 + **X** pontos de **Energia**.
 
-Você pode colocar um número total de (metade do limite de **Truques**) **Locais**, **Custando** apenas o preço da **Forma**. O **Local** tem uma área circular com raio de (5 + metade de **X**) metros. Caso você passe do limite total de **Locais** o mais antigo será **Dissipado**.
+Você pode colocar um número total de (metade do limite de **Truques**) **Locais**, **Custando** apenas o preço da **Forma**. O **Local** tem uma área circular com raio de (2 + metade de **X**) metros. Caso você passe do limite total de **Locais** o mais antigo será **Dissipado**.
 
 No começo do seu **Turno** você pode escolher um **Feitiço** com a **Forma** de **Local** para ser aplicado em qualquer quantia a sua escolha de **Locais** ao seu controle (você pode ser afetado), sem os **Dissipar** e também sem o **Custo** da **Forma**. Essa **Ação** não custa o seu **Turno**.
 
 ### Projeção
 
-**Custa** 15 + **X** pontos de **Energia**.
+**Custa** 10 + **X** pontos de **Energia**.
 
-O **Feitiço** caminha livremente pelo mundo como um **Ser** ao seu controle, em uma distância de (5 + **X**) metros. O **Feitiço** é aplicado em todos **Seres** em contato com o trajeto e seus arredores. 
+O **Feitiço** caminha livremente pelo mundo como um **Ser** ao seu controle, em uma distância de (4 + **X**) metros. O **Feitiço** é aplicado em todos **Seres** em contato com o trajeto e seus arredores. 
 
 # Sexto Nível
 
@@ -136,7 +136,7 @@ O **Feitiço** caminha livremente pelo mundo como um **Ser** ao seu controle, em
 
 **Custa** 15 + **X** pontos de **Energia**.
 
-No começo do seu **Turno**, a partir de você pode ser criada uma área circular com com raio de (5 + metade de **X**) metros. Você pode escolher um **Feitiço** com a **Forma** de **Aura** para ser aplicado nessa área sem o **Custo** da **Forma**. Essas **Ações** não consomem o seu **Turno**.
+No começo do seu **Turno**, a partir de você pode ser criada uma área circular com com raio de (2 + metade de **X**) metros. Você pode escolher um **Feitiço** com a **Forma** de **Aura** para ser aplicado nessa área sem o **Custo** da **Forma**. Essas **Ações** não consomem o seu **Turno**.
 
 ### Rasura
 
