--- a/3. Runas/2. Causa.md
+++ b/3. Runas/2. Causa.md
@@ -8,9 +8,9 @@ O Feitiço causa **Dano** igual ao seu **Ataque** aos **Seres** afetados.
 
 ### Sopro
 
-**Custa** 4 pontos de **Energia**.
+**Custa** 2 pontos de **Energia**.
 
-O Feitiço empurra os **Seres** afetados em uma linha reta para uma direção oposta de você em 2 metros.
+O Feitiço empurra os **Seres** afetados em uma linha reta para uma direção oposta de você em até 2 metros.
 
 # Segundo Nível
 
@@ -24,6 +24,6 @@ Escolha um tipo de **Dado**, entre **d4**, **d6**, **d8**, **d10**, **d12**, **d
 
 ### Puxar
 
-**Custa** 5 pontos de **Energia**.
+**Custa** 3 pontos de **Energia**.
 
-O Feitiço puxa os **Seres** afetados em uma linha reta para a sua direção em 3 metros.
+O Feitiço puxa os **Seres** afetados em uma linha reta para a sua direção em até 3 metros.
