--- a/3. Runas/4. Modificação.md
+++ b/3. Runas/4. Modificação.md
@@ -22,7 +22,7 @@ O **Feitiço**, mesmo que conjurado neste **Turno**, só será realizado no pró
 
 **Custa** 2 pontos de **Energia**.
 
-Modifica a **Runa** esquerda dobrando todos seus valores, desde **Efeitos**, **Dano**, **Distância** a também **Custos**.
+Modifica a **Runa** esquerda dobrando todos seus valores, desde **Efeitos**, **Dano** e **Distância** mas não o **Custo**.
 
 ### Canalização
 
