teoricamente todas as críticas foram resolvidas

--- a/3. Runas/1. Forma.md
+++ b/3. Runas/1. Forma.md
@@ -24,9 +24,9 @@ O **Feitiço** é aplicado a até dois **Seres** ao seu redor e a sua escolha.
 
 **Custa** 3 pontos de **Energia**.
 
-Você pode colocar um número total de (o seu limite de **Truques** + 2) **Armadilhas**, **Custando** apenas o preço da **Forma**. Caso você passe do limite total de **Armadilhas** a mais antiga será **Dissipada**.
+Você pode colocar um número total de (o seu limite de **Truques** + 2) **Armadilhas**, **Custando** apenas o preço da **Forma**, dentro de um **Alcance** igual a seu **Atributo** de **Velocidade**. Caso você passe do limite total de **Armadilhas** a mais antiga será **Dissipada**.
 
-Você pode escolher aplicar qualquer **Feitiço** seu com a **Forma** de **Armadilha** no primeiro **Ser** que pisar em alguma **Armadilha** ou em seus arredores, sem o **Custo** da **Forma**. Aquela **Armadilha** será **Dissipada**.
+Você pode escolher aplicar qualquer **Feitiço** seu com a **Forma** de **Armadilha** no primeiro **Ser** que pisar em alguma **Armadilha** ou em seus arredores, sem o **Custo** da **Forma**. Aquela **Armadilha** será **Dissipada**, porém seu **Feitiço** não precisa de **Precisão**.
 
 ### Lembrança
 
